<resources>
    <string name="app_name">WecanTalk</string>

    <string name="login_title_text">로그인</string>
    <string name="login_id_hint">아이디</string>
    <string name="login_pw_hint">비밀번호</string>
    <string name="login_name_hint">이름</string>
    <string name="login_email_hint">이메일</string>
    <string name="login_phone_hint">휴대폰</string>
    <string name="login_nation_hint">국가</string>
    <string name="login_location_hint">지역</string>
    <string name="login_prefer_language_hint">선호언어</string>
    <string name="login_register">회원 가입하기</string>

    <string name="main_fragment_btn_friends">친구목록</string>
    <string name="main_fragment_btn_community">대화목록</string>
    <string name="main_fragment_btn_study">라이브</string>
    <string name="main_fragment_btn_setting">설정</string>

    <string name="study_fragment_btn_youglish">Youglish</string>
    <string name="study_fragment_btn_word_cloud">Word Cloud</string>

    <string name="community_title">대화방</string>

    <string name="study_many_use_title">실시간 많이 사용한 단어</string>
    <string name="study_best_match_title">베스트 매치</string>


    <!-- notepad-->
    <string name="hello_world">Hello world!</string>
    <string name="about">About</string>
    <string name="title">Title : </string>
    <string name="menu_delete">Delete Item</string>
    <string name="no_title">No Title</string>
    <string name="edit_note">Edit Note</string>
    <string name="save_menu_noteedit">Save</string>
    <string name="delete_menu_noteedit">Delete</string>
</resources>
