<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/main_fragment" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/main_fragment_button_panel">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/main_fragment_btn_friends"
                android:text="@string/main_fragment_btn_friends"
                android:background="@color/white"
                style="?android:buttonBarButtonStyle"
                android:layout_weight="1"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/main_fragment_btn_community"
                android:text="@string/main_fragment_btn_community"
                android:background="@color/white"
                style="?android:buttonBarButtonStyle"
                android:layout_weight="1"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/main_fragment_btn_study"
                android:text="@string/main_fragment_btn_study"
                android:background="@color/white"
                style="?android:buttonBarButtonStyle"
                android:layout_weight="1"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/main_fragment_btn_setting"
                android:text="@string/main_fragment_btn_setting"
                android:background="@color/white"
                style="?android:buttonBarButtonStyle"
                android:layout_weight="1"/>

        </LinearLayout>

</LinearLayout>