<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main"
    tools:context="com.vitamin.wecantalk.UIActivity.StartActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/register_input_panel"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <ImageView
            android:layout_width="300dp"
            android:layout_height="550dp"
            android:id="@+id/register_input_background_image"
            android:background="@drawable/rounded_rectangle_gray"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:id="@+id/register_input_register_title_text"
            android:text="@string/login_register"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@drawable/rounded_rectangle_white"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintTop_toTopOf="@id/register_input_background_image"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:id="@+id/id_edittext"
            android:background="@drawable/rounded_rectangle_white"
            app:layout_constraintTop_toBottomOf="@+id/register_input_register_title_text"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingEnd="10dp"
                android:background="@drawable/rounded_rectangle_white"
                android:hint="@string/login_id_hint"
                android:singleLine="true"
                android:id="@+id/register_input_id_edittext"
                android:layout_weight="1" />

            <Button
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:text="중복확인"
                android:textSize="12dp"
                android:textColor="@color/white"
                android:id="@+id/id_check"
                android:background="@drawable/rounded_rectangle_mint" />

        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/register_input_pw_edittext"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingEnd="10dp"
            android:background="@drawable/rounded_rectangle_white"
            android:hint="@string/login_pw_hint"
            android:singleLine="true"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@+id/id_edittext"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/register_input_name_edittext"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingEnd="10dp"
            android:background="@drawable/rounded_rectangle_white"
            android:hint="@string/login_name_hint"
            android:singleLine="true"
            app:layout_constraintTop_toBottomOf="@+id/register_input_pw_edittext"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/register_input_name_edittext"
            android:id="@+id/email"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/rounded_rectangle_white">

            <EditText
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:id="@+id/register_input_email_edittext"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingEnd="10dp"
                android:background="@drawable/rounded_rectangle_white"
                android:hint="@string/login_email_hint"
                android:singleLine="true"
                android:inputType="textEmailAddress" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text=" @"
                android:textSize="15dp"
                android:textColor="#9f9fa0"/>

            <Spinner
                android:id="@+id/email_spinner"
                android:layout_width="96dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:textAlignment="center"
                android:entries="@array/email_site"
                android:visibility="visible"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/join_edittext_email"
                android:layout_width="96dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:textAlignment="center"
                android:entries="@array/email_site"
                android:visibility="gone" />

        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/register_input_phone_edittext"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingEnd="10dp"
            android:background="@drawable/rounded_rectangle_white"
            android:hint="@string/login_phone_hint"
            android:singleLine="true"
            android:inputType="phone"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:id="@+id/nation"
            app:layout_constraintTop_toBottomOf="@+id/register_input_phone_edittext"
            android:orientation="horizontal"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:background="@drawable/rounded_rectangle_white">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="국가"
                    android:layout_gravity="center"/>

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textAlignment="center"
                    android:entries="@array/nation"
                    android:id="@+id/register_input_nation_spinner"
                    android:visibility="visible"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:background="@drawable/rounded_rectangle_white">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="지역"
                    android:layout_gravity="center"/>

                <Spinner
                    android:id="@+id/register_input_location_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textAlignment="center"
                    android:entries="@array/location"
                    android:visibility="visible"
                    android:layout_weight="1" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical"
            android:id="@+id/language"
            app:layout_constraintTop_toBottomOf="@+id/nation"
            android:background="@drawable/rounded_rectangle_white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="선호언어"
                android:layout_gravity="center" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:entries="@array/prefer_language"
                android:visibility="visible"
                android:id="@+id/register_input_prefer_language_spinner"
                android:layout_weight="1" />

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/register_button"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/rectangle_green"
            android:text="회원가입"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/language"/>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
