<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main"
    tools:context="com.vitamin.wecantalk.UIActivity.StartActivity">

    <ImageView
        android:layout_width="230dp"
        android:layout_height="190dp"
        android:id="@+id/start_logo_image"
        android:background="@drawable/wecantalk_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <android.support.constraint.ConstraintLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/start_input_panel"
        android:visibility="invisible"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/start_logo_image"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:id="@+id/start_input_background_image"
            android:background="@drawable/rounded_rectangle_gray"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:id="@+id/start_input_login_title_text"
            android:text="@string/login_title_text"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@drawable/rounded_rectangle_white"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintTop_toTopOf="@id/start_input_background_image"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/white"
            android:layout_marginTop="38dp"
            android:id="@+id/start_center_fill_temp"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/start_input_id_edittext"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingEnd="10dp"
            android:background="@drawable/rounded_rectangle_white"
            android:hint="@string/login_id_hint"
            android:singleLine="true"
            app:layout_constraintTop_toBottomOf="@+id/start_input_login_title_text"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/start_input_pw_edittext"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingEnd="10dp"
            android:background="@drawable/rounded_rectangle_white"
            android:hint="@string/login_pw_hint"
            android:singleLine="true"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@+id/start_input_id_edittext"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/start_input_login_button"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/rectangle_green"
            android:text="@string/login_title_text"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/start_input_pw_edittext"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/start_input_register"
            android:text="@string/login_register"
            android:textColor="@color/dark_gray"
            android:textSize="12sp"
            android:textAlignment="center"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:paddingEnd="8dp"
            android:paddingRight="8dp"
            app:layout_constraintTop_toBottomOf="@id/start_input_login_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    </android.support.constraint.ConstraintLayout>

    <!--<android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:layout_width="230dp"
            android:layout_height="190dp"
            android:layout_marginTop="20dp"
            android:id="@+id/logo_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@drawable/robot_hello" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/id_layout"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo_image">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:background="@drawable/novatalk_id"/>

            <EditText
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:id="@+id/user_id"
                android:layout_marginLeft="15dp"/>


        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pw_layout"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/id_layout">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:background="@drawable/novatalk_pw"/>

            <EditText
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:id="@+id/user_pw"
                android:layout_marginLeft="15dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pw_layout">

            <TextView
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:id="@+id/login_button"
                android:text="LOGIN"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="#ffffff"
                android:gravity="center_vertical"
                android:background="@drawable/rounded_ractangle_green"/>

            <TextView
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:id="@+id/register_button"
                android:text="REGISTER"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="#ffffff"
                android:gravity="center_vertical"
                android:background="@drawable/rounded_ractangle_green2"/>


        </LinearLayout>


    </android.support.constraint.ConstraintLayout>-->

</android.support.constraint.ConstraintLayout>
